Text wrap issue partially fixed

--- a/src/components/CatrgoryDetails/CategoryFilter/style.scss
+++ b/src/components/CatrgoryDetails/CategoryFilter/style.scss
@@ -47,6 +47,12 @@
     }
     &__body__title {
       color: #005bc7;
+      margin: 0;
+      max-width: 200px;
+      margin: auto;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &__body__title h3 {
       font-weight: 400;
@@ -54,6 +60,11 @@
     }
     &__body__description {
       color: #808080;
+      max-width: 200px;
+      margin: auto;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     &__body h2 {
       color: #808080;
